Fix on Small fix

--- a/fram/static/css/index.css
+++ b/fram/static/css/index.css
@@ -261,7 +261,7 @@
   }
 
   .index-dropdown{
-    margin-top: 20vh;
+    margin-top: 17vh;
   }
 }
 
@@ -272,7 +272,7 @@
   }
 
   .index-dropdown{
-    margin-top: 30vh;
+    margin-top: 20vh;
   }
 
   #index-dropdown{
